--- a/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
@@ -12,6 +12,13 @@
     <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
     <link href="~/static/style.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-core.min.js" type="text/javascript"></script>
+    <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-map.min.js" type="text/javascript"></script>
+    @if (IsSectionDefined("AddToHead"))
+    {
+        @RenderSection("AddToHead", required: false)
+    }
 </head>
 <body>
     <nav class="navbar navbar-expand-md" style="background-color: RGB(253,216,71)">
