--- a/Visual Studio Project/LonghornAirlines/Views/Tickets/Create.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Tickets/Create.cshtml
@@ -1,35 +1,23 @@
-﻿@model LonghornAirlines.Models.Business.Ticket
+﻿@model LonghornAirlines.Models.ViewModels.TicketCreationModel
 
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>Ticket</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Fare" class="control-label"></label>
-                <input asp-for="Fare" class="form-control" />
-                <span asp-validation-for="Fare" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Seat" class="control-label"></label>
-                <input asp-for="Seat" class="form-control" />
-                <span asp-validation-for="Seat" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+@section AddToHead{
+    <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-base.min.js" type="text/javascript"></script>
+}
+<form asp-action="Create">
+    <div class="jumbotron">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <h4>Editing ticket for</h4>
+        <div class="form-group">
+            <label asp-for="CustomerID" class="control-label"></label>
+            <input asp-for="CustomerID" class="form-control" />
+            <span asp-validation-for="CustomerID" class="text-danger"></span>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+    @Html.HiddenFor(tcm => tcm.TicketID);
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-primary" />
+    </div>
+</form>
