--- a/Visual Studio Project/LonghornAirlines/Views/Tickets/Edit.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Tickets/Edit.cshtml
@@ -1,36 +1,51 @@
-﻿@model LonghornAirlines.Models.Business.Ticket
+﻿@model LonghornAirlines.Models.ViewModels.TicketCreationModel
 
 @{
     ViewData["Title"] = "Edit";
 }
+@section imageContent
+{
 
-<h1>Edit</h1>
-
-<h4>Ticket</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
+    <form asp-action="Edit">
+        <div class="jumbotron">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="TicketID" />
-            <div class="form-group">
-                <label asp-for="Fare" class="control-label"></label>
-                <input asp-for="Fare" class="form-control" />
-                <span asp-validation-for="Fare" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Seat" class="control-label"></label>
-                <input asp-for="Seat" class="form-control" />
-                <span asp-validation-for="Seat" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+            @Html.DropDownListFor(tcm => tcm.CustomerID, (SelectList)ViewBag.ReservationCustomers, new { @class = "form-control" })
+            <!--TODO: Customer Selection-->
+            <a>Find new customer</a>
+        </div>
+
+        <div id="container" style="width: 500px; height: 400px;">
+        </div>
+
+        <object style="width: 0; height: 0;" data="~/static/drawing.svg" type="image/svg+xml" id="house"></object>
+        <script>
+            anychart.onDocumentLoad(function () {
+                // note that you should use onDocumentLoad to get image contect
+                var imageElement = document.getElementById("house");
+                // get the SVG content
+                var svgData = imageElement.contentDocument;
+
+               chart = anychart.seatMap([
+                   { id: "g0", value: "First Class" },
+                   { id: "g1", value: "Budget" },
+                   {id: "1A", value: "1-A"}
+                ]);
+                // set SVG data to the chart
+                chart.geoData(svgData);
+
+                // set container id for the chart
+                chart.container("container");
+                // initiate chart drawing
+                chart.draw();
+            });
+        </script>
+
+        <div class="form-group">
+            <input type="submit" value="Save" class="btn btn-primary" />
+        </div>
+    </form>
+    <div>
+        <a asp-action="Index">Back to List</a>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+}
