--- a/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
@@ -31,6 +31,13 @@
                 <li class="nav-item mr-md-3">
                     Reservations
                 </li>
+                @if (User.Identity.IsAuthenticated && User.IsInRole("Manager"))
+                {
+                    <li class="nav-item mr-md-3">
+                        <a asp-action="Index" asp-controller="FlightInfos">Manage Flights</a>
+                    </li>
+                }
+
             </ul>
             @if (User.Identity.IsAuthenticated)
             {
