--- a/Visual Studio Project/LonghornAirlines/Views/Account/Register.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Account/Register.cshtml
@@ -3,12 +3,12 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>Welcome to Longhorn Airlines!</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h4>Please create a new account.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <h4>@ViewBag.Error</h4>
@@ -34,12 +34,6 @@
         @Html.LabelFor(m => m.MI, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.MI, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.AdvantageNumber, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.AdvantageNumber, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
