--- a/Visual Studio Project/LonghornAirlines/Views/Flights/Details.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Flights/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@model LonghornAirlines.Models.Business.Flight
 
 @{
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewData["Title"] = "Details";
 }
 
