--- a/Visual Studio Project/LonghornAirlines/Views/Reservation/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Reservation/Index.cshtml
@@ -5,12 +5,7 @@
 }
 
 <h1>Index</h1>
-@if (User.Identity.IsAuthenticated && User.IsInRole("Customer"))
-{
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
-}
+<h5>To Create a New Reservation, search for flights on the home page!</h5>
 
 <table class="table">
     <thead>
