--- a/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Create.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model LonghornAirlines.Models.Business.FlightInfo
 
 @{
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewData["Title"] = "Create";
 }
 
