--- a/Visual Studio Project/LonghornAirlines/Views/Flights/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Flights/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<LonghornAirlines.Models.Business.Flight>
 
 @{
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewData["Title"] = "Index";
 }
 
