--- a/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Create.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Create.cshtml
@@ -5,13 +5,20 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create A New Flight Number</h1>
 
-<h4>FlightInfo</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="FlightInfoID" class="control-label"></label>
+                <input asp-for="FlightInfoID" class="form-control" />
+                <span asp-validation-for="FlightInfoID" class="text-danger"></span>
+            </div>
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FlightTime" class="control-label"></label>
