implement user creation by customer

--- a/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
     </header>
 
     <!-- Page Content -->
-    <section class="py-5">
+    <section class="py-5"  id="scrollTo">
         <div class="container">
             @RenderSection("pageContent", required: false)
             @RenderBody()
