--- a/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
@@ -8,4 +8,6 @@
     <a class="btn-primary">Manage Reservations</a>
     <a class="btn-primary" asp-action="Index" asp-controller="FlightInfos">Manage Flights</a>
     <a class="btn-primary">Gate Agent Functions</a>
+    <a class="btn-primary" asp-action="Index" asp-controller="RoleAdmin">Manage Roles</a>
+    <a class="btn-primary" asp-action="Manager" asp-controller="Account">Manage Users</a>
 }
