--- a/Visual Studio Project/LonghornAirlines/Views/RoleAdmin/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/RoleAdmin/Index.cshtml
@@ -2,6 +2,7 @@
 @model IEnumerable<RoleEditModel>
 
 @{
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewBag.Title = "Roles";
 }
 @section imageContent
