--- a/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Create.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Create.cshtml
@@ -14,9 +14,9 @@
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FlightInfoID" class="control-label"></label>
-                <input asp-for="FlightInfoID" class="form-control" />
-                <span asp-validation-for="FlightInfoID" class="text-danger"></span>
+                <label asp-for="FlightNumber" class="control-label"></label>
+                <input asp-for="FlightNumber" class="form-control" />
+                <span asp-validation-for="FlightNumber" class="text-danger"></span>
             </div>
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
