--- a/Visual Studio Project/LonghornAirlines/Views/Flights/Details.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Flights/Details.cshtml
@@ -23,6 +23,24 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.hasDeparted)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Pilot)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Pilot)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CoPilot)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CoPilot)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Attendant)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Attendant)
+        </dd>
         <dt class="col-sm-2"></dt>
     </dl>
 </div>
