GENERATING REPORTS WORKS WOOHOOO

--- a/Visual Studio Project/LonghornAirlines/Views/Report/DisplayReport.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/DisplayReport.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LonghornAirlines.Models.ViewModels.ReportsViewModel>
+﻿@model LonghornAirlines.Models.ViewModels.ReportsViewModel
 @{
     ViewData["Title"] = "View";
 }
