--- a/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Edit.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Edit.cshtml
@@ -8,7 +8,7 @@
 <h1>Edit</h1>
 
 <h4>
-    Flight Number @Html.DisplayFor(model => model.FlightInfoID)<br />
+    Flight Number @Html.DisplayFor(model => model.FlightNumber)<br />
     From: @Html.DisplayFor(model => model.Route.CityFrom.CityName) (@Html.DisplayFor(model => model.Route.CityFrom.CityCode))  To: @Html.DisplayFor(model => model.Route.CityTo.CityName) (@Html.DisplayFor(model => model.Route.CityTo.CityCode))
 </h4>
 <hr />
