--- a/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Create.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Create.cshtml
@@ -6,17 +6,24 @@
 }
 
 <h1>Create A New Flight Number</h1>
-
+<h5 class="text-danger">@ViewBag.Error</h5>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FlightNumber" class="control-label"></label>
                 <input asp-for="FlightNumber" class="form-control" />
                 <span asp-validation-for="FlightNumber" class="text-danger"></span>
+            </div>
+            <div>
+                Departure City: 
+                <div>@Html.DropDownList("DepartCity", (SelectList)ViewBag.AllCities, new { @class = "form-control" })</div>
+            </div>
+            <div>
+                Arrival City:
+                <div>@Html.DropDownList("ArriveCity", (SelectList)ViewBag.AllCities, new { @class = "form-control" }) </div>
             </div>
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -29,41 +36,6 @@
                 <label asp-for="BaseFare" class="control-label"></label>
                 <input asp-for="BaseFare" class="form-control" />
                 <span asp-validation-for="BaseFare" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Monday" /> @Html.DisplayNameFor(model => model.Monday)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Tuesday" /> @Html.DisplayNameFor(model => model.Tuesday)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Wednesday" /> @Html.DisplayNameFor(model => model.Wednesday)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Thursday" /> @Html.DisplayNameFor(model => model.Thursday)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Friday" /> @Html.DisplayNameFor(model => model.Friday)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Saturday" /> @Html.DisplayNameFor(model => model.Saturday)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Sunday" /> @Html.DisplayNameFor(model => model.Sunday)
-                </label>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
