Fixed ImageContent on some views

--- a/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
@@ -4,10 +4,11 @@
 @section imageContent
 {
     <h1>Welcome to the Employee Home Page</h1>
-    <a class="btn-primary">Create Customer Reservation</a>
-    <a class="btn-primary">Manage Reservations</a>
-    <a class="btn-primary" asp-action="Index" asp-controller="FlightInfos">Manage Flights</a>
-    <a class="btn-primary">Gate Agent Functions</a>
-    <a class="btn-primary" asp-action="Index" asp-controller="RoleAdmin">Manage Roles</a>
-    <a class="btn-primary" asp-action="Manager" asp-controller="Account">Manage Users</a>
+    <a class="btn btn-primary">Create Customer Reservation</a>
+    <a class="btn btn-primary">Manage Reservations</a>
+    <a class="btn btn-primary" asp-action="Index" asp-controller="FlightInfos">Manage Flights</a>
+    <a class="btn btn-primary">Gate Agent Functions</a>
+    <a class="btn btn-primary" asp-action="Index" asp-controller="RoleAdmin">Manage Roles</a>
+    <a class="btn btn-primary" asp-action="Manager" asp-controller="Account">Manage Users</a>
+    <a class="btn btn-primary" asp-action="Index" asp-controller="Report">Reports</a>
 }
