Fixed Crew-Assign Bug

--- a/Visual Studio Project/LonghornAirlines/Views/Flights/Edit.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Flights/Edit.cshtml
@@ -32,7 +32,7 @@
                 @Html.DropDownList("SelectedCoPilot", (SelectList)@ViewBag.CoPilots, new { @class = "form-control" })
             </div>
             <div class="form-group">
-                <label class="control-label">Pilot</label>
+                <label class="control-label">Attendant</label>
                 @Html.DropDownList("SelectedAttendant", (SelectList)@ViewBag.Attendants, new { @class = "form-control" })
             </div>
             <div class="form-group">
