Reports Index Created

--- a/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
@@ -4,7 +4,7 @@
 @section imageContent
 {
     <h1>Welcome to the Employee Home Page</h1>
-    <a class="btn btn-primary">Create Customer Reservation</a>
+    <a class="btn btn-primary" asp-action="bookForCust" asp-controller="Home">Create Customer Booking</a>
     <a class="btn btn-primary">Manage Reservations</a>
     <a class="btn btn-primary" asp-action="Index" asp-controller="FlightInfos">Manage Flights</a>
     <a class="btn btn-primary">Gate Agent Functions</a>
