--- a/Visual Studio Project/LonghornAirlines/Views/Tickets/Edit.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Tickets/Edit.cshtml
@@ -15,9 +15,8 @@
             <a asp-action="TicketCustomerSearch" asp-controller="Search" asp-route-TicketID="@Model.TicketID">Find existing customer</a>
 
             <a asp-action="CustomerCreateAccount" asp-controller="Search" asp-route-TicketID="@Model.TicketID">Set up new customer</a>
-
         </div>
-
+        <div id="test" class="container">Taken Seats: </div>
         <div id="container" style="width: 500px; height: 400px;">
         </div>
         <p id="seatLabel">Selected Seat: @Model.SeatID</p>
@@ -31,28 +30,36 @@
                 var imageElement = document.getElementById("house");
                 // get the SVG content
                 var svgData = imageElement.contentDocument;
-
+                var takenSeats = @Json.Serialize(ViewBag.takenSeats);
+                function getColor(id) {
+                    for (i = 0; i < takenSeats.length; i++) {
+                        if (takenSeats[i] == id) {
+                            return "gray";
+                        }
+                    }
+                    return "green";
+                }
                 chart = anychart.seatMap();
                 seatMapSeries = chart.choropleth();
                 seatMapSeries.data([
-                   { id: "g0", value: "First Class", fill: "gold 0.5", hoverFill: "green 0.1", hoverStroke: "3 green"},
-                   { id: "g1", value: "Budget" },
-                   { id: "1A", value: "1A", info: "@ViewBag.firstClassFare"},
-                   { id: "1B", value: "1B", info: "@ViewBag.firstClassFare"},
-                   { id: "2A", value: "2A", info: "@ViewBag.firstClassFare"},
-                   { id: "2B", value: "2B", info: "@ViewBag.firstClassFare"},
-                   { id: "3A", value: "3A", info: "@ViewBag.baseFare"},
-                   { id: "3B", value: "3B", info: "@ViewBag.baseFare"},
-                   { id: "3C", value: "3C", info: "@ViewBag.baseFare"},
-                   { id: "3D", value: "3D", info: "@ViewBag.baseFare"},
-                   { id: "4A", value: "4A", info: "@ViewBag.baseFare"},
-                   { id: "4B", value: "4B", info: "@ViewBag.baseFare"},
-                   { id: "4C", value: "4C", info: "@ViewBag.baseFare"},
-                   { id: "4D", value: "4D", info: "@ViewBag.baseFare"},
-                   { id: "5A", value: "5A", info: "@ViewBag.baseFare"},
-                   { id: "5B", value: "5B", info: "@ViewBag.baseFare"},
-                   { id: "5C", value: "5C", info: "@ViewBag.baseFare"},
-                   { id: "5D", value: "5D", info: "@ViewBag.baseFare"},
+                   { id: "g0", value: "First Class"},
+                    { id: "g1", value: "Budget" },
+                    { id: "1A", value: "1A", info: "@ViewBag.firstClassFare", fill:getColor("1A") },
+                   { id: "1B", value: "1B", info: "@ViewBag.firstClassFare", fill:getColor("1B") },
+                   { id: "2A", value: "2A", info: "@ViewBag.firstClassFare", fill:getColor("2A") },
+                   { id: "2B", value: "2B", info: "@ViewBag.firstClassFare", fill:getColor("2B") },
+                   { id: "3A", value: "3A", info: "@ViewBag.baseFare", fill:getColor("3A") },
+                   { id: "3B", value: "3B", info: "@ViewBag.baseFare", fill:getColor("3B") },
+                   { id: "3C", value: "3C", info: "@ViewBag.baseFare", fill:getColor("3C") },
+                   { id: "3D", value: "3D", info: "@ViewBag.baseFare", fill:getColor("3D") },
+                   { id: "4A", value: "4A", info: "@ViewBag.baseFare", fill:getColor("4A") },
+                   { id: "4B", value: "4B", info: "@ViewBag.baseFare", fill:getColor("4B") },
+                   { id: "4C", value: "4C", info: "@ViewBag.baseFare", fill:getColor("4C") },
+                   { id: "4D", value: "4D", info: "@ViewBag.baseFare", fill:getColor("4D") },
+                   { id: "5A", value: "5A", info: "@ViewBag.baseFare", fill:getColor("5A") },
+                   { id: "5B", value: "5B", info: "@ViewBag.baseFare", fill:getColor("5B") },
+                   { id: "5C", value: "5C", info: "@ViewBag.baseFare", fill:getColor("5C") },
+                   { id: "5D", value: "5D", info: "@ViewBag.baseFare", fill:getColor("5D") },
                ]);
                 // set SVG data to the chart
                 chart.geoData(svgData);
@@ -68,11 +75,11 @@
                 tooltips.background("green 0.8");
                 tooltips.separator("white");
 
-
                 // add a listener
-                chart.listen('pointClick', function(e){
-                    document.getElementById("SeatID").value = e.iterator.get("id");
-                    document.getElementById("seatLabel").innerHTML = "Selected Seat:" + e.iterator.get("id");
+                chart.listen('pointClick', function (e) {
+                    var seat = e.iterator.get("id");
+                    document.getElementById("seatLabel").innerHTML = "Selected Seat:" + seat;
+                    document.getElementById("SeatID").value = seat;
                 });
 
                 // set container id for the chart
