Change to Reports- Fixed slight logic issue

--- a/Visual Studio Project/LonghornAirlines/Views/Reservation/Description.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Reservation/Description.cshtml
@@ -32,7 +32,7 @@
                             @t.Customer.FirstName
                         }
                     </td>
-                    <td>@t.Flight.FlightInfo.FlightInfoID</td>
+                    <td>@t.Flight.FlightInfo.FlightNumber To @t.Flight.FlightInfo.Route.CityTo</td>
                     <td>@t.Flight.Date</td>
                     <td>@t.Flight.FlightInfo.FlightTime</td>
                     <td>@t.Seat</td>
