--- a/Visual Studio Project/LonghornAirlines/Views/Tickets/Edit.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Tickets/Edit.cshtml
@@ -92,7 +92,7 @@
                     var seat = e.iterator.get("id");
                     if (isTaken(seat) && seat != userSeat) {
                         window.alert("Seat is not available");
-                        document.getElementById("seatLabel").innerHTML = "Selected Seat:" + Unavailable Seat;
+                        document.getElementById("seatLabel").innerHTML = "Selected Seat: Unavailable Seat";
                     }
                     else {
                         document.getElementById("seatLabel").innerHTML = "Selected Seat:" + seat;
